# magma

./: .clang-format  .gitignore  .travis.yml  BUILD_INSTRUCTIONS.md  Buffer.hpp  BufferView.hpp  CMakeLists.txt  CommandBuffer.hpp  CommandBuffers.hpp  CreateInfo.hpp  DescriptorPool.hpp  DescriptorSetLayout.hpp  DescriptorSets.hpp  Device.hpp  DeviceBasedHandle.hpp  DeviceDeleteMap.hpp  DeviceMemory.hpp  DynamicBuffer.hpp  Event.hpp  Fence.hpp  Framebuffer.hpp  Image.hpp  ImageView.hpp  Pipeline.hpp  PipelineLayout.hpp  README.md  RenderPass.hpp  Sampler.hpp  Semaphore.hpp  ShaderModule.hpp  SwapChainHandler.hpp  VulkanFormatsHandler.hpp  VulkanHandler.hpp
cmake/: compiler.cmake  directory.cmake  library.cmake  magma-config.cmake.in  module.cmake  platform.cmake  unit_tests.cmake
examples/: CommandBuffer.cpp  Device.cpp  Makefile  SetupMacro.hpp
include/magma/: Buffer.hpp  BufferView.hpp  CommandBuffer.hpp  CreateInfo.hpp  Deleter.hpp  DescriptorSetLayout.hpp  DescriptorSets.hpp  Device.hpp  DeviceMemory.hpp  DisplaySystem.hpp  Event.hpp  Fence.hpp  Framebuffer.hpp  Image.hpp  ImageView.hpp  Pipeline.hpp  PipelineLayout.hpp  RenderPass.hpp  Sampler.hpp  Semaphore.hpp  ShaderModule.hpp  Surface.hpp  SwapChainHandler.hpp  Swapchain.hpp  VulkanFormatsHandler.hpp  VulkanHandler.hpp
modules/: .#CMakeLists.txt  CMakeLists.txt
modules/magma/: Buffer.hpp  CommandBuffer.hpp  CreateInfo.hpp  Deleter.hpp  DescriptorSetLayout.hpp  DescriptorSets.hpp  DeviceMemory.hpp  DynamicBuffer.hpp  Event.hpp  Fence.hpp  Framebuffer.hpp  Pipeline.hpp  PipelineLayout.hpp  RenderPass.hpp  Semaphore.hpp  Surface.hpp  VulkanFormatsHandler.hpp  VulkanHandler.hpp
tests/: CMakeLists.txt  CommandBuffer.cpp  Makefile  SetupMacro.hpp
tests/magma-core/: CMakeLists.txt  core-test.cpp
